WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197757
Bag's move operator= leaks memory
https://bugs.webkit.org/show_bug.cgi?id=197757
Summary
Bag's move operator= leaks memory
Saam Barati
Reported
2019-05-09 16:29:10 PDT
It doesn't clear the prior |this|
Attachments
patch
(1.28 KB, patch)
2019-05-10 16:17 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
patch
(1.11 KB, patch)
2019-05-10 16:18 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2019-05-10 16:17:39 PDT
Created
attachment 369614
[details]
patch
Saam Barati
Comment 2
2019-05-10 16:18:39 PDT
Created
attachment 369615
[details]
patch
Robin Morisset
Comment 3
2019-05-10 16:20:45 PDT
Comment on
attachment 369615
[details]
patch LGTM
Keith Miller
Comment 4
2019-05-10 16:21:48 PDT
Comment on
attachment 369615
[details]
patch r=me.
WebKit Commit Bot
Comment 5
2019-05-10 17:40:03 PDT
Comment on
attachment 369615
[details]
patch Clearing flags on attachment: 369615 Committed
r245202
: <
https://trac.webkit.org/changeset/245202
>
WebKit Commit Bot
Comment 6
2019-05-10 17:40:05 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2019-05-10 17:41:16 PDT
<
rdar://problem/50684450
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug