Bag's move operator= leaks memory https://bugs.webkit.org/show_bug.cgi?id=197757

Reviewed by Keith Miller.

It was unused. So I'm just removing it. We can implement it properly
if we ever need it.

* wtf/Bag.h:
(WTF::Bag::operator=): Deleted.


Canonical link: https://commits.webkit.org/211940@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245202 268f45cc-cd09-0410-ab3c-d52691b4dbfc